# jupyter-notebooks

bike-stats/: bike-stats.ipynb  pyproject.toml
data-visualization/: pyproject.toml
pokemon-stats/: pokemon.ipynb  pyproject.toml
vg-stats/: README.md  pyproject.toml  vg-stats.ipynb
