[tool.poetry]
name = "pokemon-stats"
version = "0.1.0"
description = ""
authors = ["LeeThomas13 <lmtthomasritz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^2.2.9"
seaborn = "^0.11.0"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
sklearn = "^0.0"
statsmodels = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
